// Vitest Snapshot v1

exports[`Skeleton > Skeleton advanceVue demo works fine 1`] = `
<div
  class="t-skeleton-demo"
  data-v-56b0d697=""
>
  <section
    class="t-skeleton-demo-card"
    data-v-56b0d697=""
  >
    <div
      class="header"
      data-v-56b0d697=""
    >
      组合成网页效果
    </div>
    <div
      class="content"
      data-v-56b0d697=""
    >
      <t-skeleton
        data-v-56b0d697=""
        rowcol="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],1,1,[object Object],[object Object]"
      />
    </div>
  </section>
  <section
    class="t-skeleton-demo-card"
    data-v-56b0d697=""
  >
    <div
      class="header"
      data-v-56b0d697=""
    >
      组合成列表效果
    </div>
    <div
      class="content"
      data-v-56b0d697=""
    >
      <ul
        class="t-skeleton-demo-list"
        data-v-56b0d697=""
      >
        <li
          data-v-56b0d697=""
        >
          <t-skeleton
            class="avatar"
            data-v-56b0d697=""
            theme="avatar"
          />
          <t-skeleton
            class="paragraph"
            data-v-56b0d697=""
            theme="paragraph"
          />
        </li>
        <li
          data-v-56b0d697=""
        >
          <t-skeleton
            class="avatar"
            data-v-56b0d697=""
            theme="avatar"
          />
          <t-skeleton
            class="paragraph"
            data-v-56b0d697=""
            theme="paragraph"
          />
        </li>
        <li
          data-v-56b0d697=""
        >
          <t-skeleton
            class="avatar"
            data-v-56b0d697=""
            theme="avatar"
          />
          <t-skeleton
            class="paragraph"
            data-v-56b0d697=""
            theme="paragraph"
          />
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`Skeleton > Skeleton animationVue demo works fine 1`] = `
<t-row
  class="t-skeleton-demo"
>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         渐变加载动画 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          animation="gradient"
        />
      </div>
    </section>
  </t-col>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         闪烁加载动画 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          animation="flashed"
        />
      </div>
    </section>
  </t-col>
</t-row>
`;

exports[`Skeleton > Skeleton baseVue demo works fine 1`] = `
<div
  data-v-3758f58c=""
>
  <t-switch
    class="mb-20"
    data-v-3758f58c=""
  />
  <div
    data-v-3758f58c=""
  >
    <t-skeleton
      data-v-3758f58c=""
      loading="true"
    >
      <div
        class="t-skeleton-demo-paragraph"
        data-v-3758f58c=""
      >
        <p
          data-v-3758f58c=""
        >
           骨架屏组件，是指当网络较慢时，在页面真实数据加载之前，给用户展示出页面的大致结构。 一方面让用户对页面有一定的心理预期，另一方面可以改善长期停留在空白屏给用户带来的枯燥和不适感。它可以为用户提供更好视觉效果和使用体验。 
        </p>
      </div>
    </t-skeleton>
  </div>
</div>
`;

exports[`Skeleton > Skeleton delayVue demo works fine 1`] = `
<div
  class="t-skeleton-demo-delay"
>
  <div
    class="header"
  >
    <t-button
      size="small"
    >
      无 delay 属性快速加载数据（会闪屏）
    </t-button>
    <t-button
      size="small"
    >
      有 delay 属性快速加载数据（无闪屏）
    </t-button>
  </div>
  <div
    class="content"
  >
    <t-skeleton
      delay="500"
    >
      <div
        class="t-skeleton-demo-paragraph"
      >
        <p>
           骨架屏组件，是指当网络较慢时，在页面真实数据加载之前，给用户展示出页面的大致结构。 一方面让用户对页面有一定的心理预期，另一方面可以改善长期停留在空白屏给用户带来的枯燥和不适感。它可以为用户提供更好视觉效果和使用体验。 
        </p>
      </div>
    </t-skeleton>
  </div>
</div>
`;

exports[`Skeleton > Skeleton themeVue demo works fine 1`] = `
<t-row
  class="t-skeleton-demo"
>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         文本 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          theme="text"
        />
      </div>
    </section>
  </t-col>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         头像 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          theme="avatar"
        />
      </div>
    </section>
  </t-col>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         段落 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          theme="paragraph"
        />
      </div>
    </section>
  </t-col>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         头像描述 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          theme="avatar-text"
        />
      </div>
    </section>
  </t-col>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         选项卡 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          theme="tab"
        />
      </div>
    </section>
  </t-col>
  <t-col>
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
         文章 
      </div>
      <div
        class="content"
      >
        <t-skeleton
          theme="article"
        />
      </div>
    </section>
  </t-col>
</t-row>
`;
